Replace deprecated new URL constructors in appserv-tests servlet-3.0/3.1 devtests
Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>