@@ -58,8 +58,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-            + contextRoot + "/TestServlet?target=DispatchTargetWithPath");
+        URL url = URI.create("http://" + host  + ":" + port
+            + contextRoot + "/TestServlet?target=DispatchTargetWithPath").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
