@@ -58,8 +58,8 @@ public class WebTest {
     }
 
     public void doTest(String mode) throws Exception {
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/test?" + mode);
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/test?" + mode).toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
