@@ -66,8 +66,8 @@ public class WebTest {
         BufferedReader input = null;
 
         try {
-            URL url = new URL("http://" + host  + ":" + port +
-                contextRoot + "/" + path + "?" + mode);
+            URL url = URI.create("http://" + host  + ":" + port +
+                contextRoot + "/" + path + "?" + mode).toURL();
             System.out.println("Connecting to: " + url.toString());
 
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
